force-app/main/default/objects/Reproductive_Health__c/Reproductive_Health__c.object-meta.xml
<CustomObject>
    <label>Reproductive Health</label>
    <nameField>
        <displayFormat>RH-{0000}</displayFormat>
        <label>Reproductive Health Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reproductive Healths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>