force-app/main/default/objects/Reproductive_Health__c/fields/Birth_Control_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Control_Date__c</fullName>
    <label>Birth Control Date</label>
    <type>Date</type>
</CustomField>