force-app/main/default/objects/Reproductive_Health__c/fields/Birth_Control_Method__c.field-meta.xml
<CustomField>
    <fullName>Birth_Control_Method__c</fullName>
    <label>Birth Control Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abstinence</fullName>
            </value>
            <value>
                <fullName>Birth Control Implant</fullName>
            </value>
            <value>
                <fullName>Birth Control Patch</fullName>
            </value>
            <value>
                <fullName>Birth Control Pill</fullName>
            </value>
            <value>
                <fullName>Birth Control Shot(Depo-Provera, etc.)</fullName>
            </value>
            <value>
                <fullName>Condoms</fullName>
            </value>
            <value>
                <fullName>IUD</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other(Specify)</fullName>
            </value>
            <value>
                <fullName>Rhythm Method</fullName>
            </value>
            <value>
                <fullName>Unknow</fullName>
            </value>
            <value>
                <fullName>Vaginal Ring</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>