force-app/main/default/objects/Reproductive_Health__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reproductive Healths</relationshipLabel>
    <relationshipName>Reproductive_Healths</relationshipName>
    <type>Lookup</type>
</CustomField>