force-app/main/default/objects/Reproductive_Health__c/fields/Gender_identify__c.field-meta.xml
<CustomField>
    <fullName>Gender_identify__c</fullName>
    <label>Gender identify</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>