force-app/main/default/objects/Reproductive_Health__c/fields/Has_the_youth_ever_fathered_a_child__c.field-meta.xml
<CustomField>
    <fullName>Has_the_youth_ever_fathered_a_child__c</fullName>
    <label>Has the youth ever fathered a child?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>