force-app/main/default/objects/Reproductive_Health__c/fields/Number_of_Living_Children__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Living_Children__c</fullName>
    <label>Number of Living Children</label>
    <length>50</length>
    <type>Text</type>
</CustomField>