force-app/main/default/objects/Reproductive_Health__c/fields/Number_of_Pregnancies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pregnancies__c</fullName>
    <label>Number of Pregnancies</label>
    <length>50</length>
    <type>Text</type>
</CustomField>