force-app/main/default/objects/Reproductive_Health__c/fields/Sexual_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Orientation__c</fullName>
    <label>Sexual Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bisexual</fullName>
            </value>
            <value>
                <fullName>Heterosexual</fullName>
            </value>
            <value>
                <fullName>Homosexual/Gay/Lesbian</fullName>
            </value>
            <value>
                <fullName>Other(specify)</fullName>
            </value>
            <value>
                <fullName>Pansexual (any sexual identity)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>