force-app/main/default/objects/Reproductive_Health__c/fields/Sexually_Active__c.field-meta.xml
<CustomField>
    <fullName>Sexually_Active__c</fullName>
    <label>Sexually Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>