force-app/main/default/objects/Reproductive_Health__c/fields/Sexually_Transmitted_Diseases__c.field-meta.xml
<CustomField>
    <fullName>Sexually_Transmitted_Diseases__c</fullName>
    <label>Sexually Transmitted Diseases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bacterial Vaginosis</fullName>
            </value>
            <value>
                <fullName>Chancroid</fullName>
            </value>
            <value>
                <fullName>Chlamydia</fullName>
            </value>
            <value>
                <fullName>Genital Herpes</fullName>
            </value>
            <value>
                <fullName>Gonorrhea</fullName>
            </value>
            <value>
                <fullName>HIV/AIDS</fullName>
            </value>
            <value>
                <fullName>Human Papillomavirus HPV/ Genital Warts</fullName>
            </value>
            <value>
                <fullName>Other(Specify)</fullName>
            </value>
            <value>
                <fullName>Pelvic Inflammatory Disease</fullName>
            </value>
            <value>
                <fullName>Pubic Lice</fullName>
            </value>
            <value>
                <fullName>Syphilis</fullName>
            </value>
            <value>
                <fullName>Trichomona</fullName>
            </value>
            <value>
                <fullName>Viral Hepatitis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>