force-app/main/default/objects/Reproductive_Health__c/fields/STD_Date_of_treatment__c.field-meta.xml
<CustomField>
    <fullName>STD_Date_of_treatment__c</fullName>
    <label>STD Date of treatment</label>
    <type>Date</type>
</CustomField>