force-app/main/default/objects/Reproductive_Health__c/fields/Unknown__c.field-meta.xml
<CustomField>
    <fullName>Unknown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unknown</label>
    <type>Checkbox</type>
</CustomField>