force-app/main/default/objects/Reproductive_Health__c/fields/Youth_Currently_expecting_a_child__c.field-meta.xml
<CustomField>
    <fullName>Youth_Currently_expecting_a_child__c</fullName>
    <label>Youth Currently expecting a child?.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>